--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
     a:hover:after {
       top: 0%;
     }
+
   </style>
 </head>
 <body>
   <h1>Hola.</h1>
   <p style="font-weight:500; font-size:2.2em">
-    Mi nombre es Eddy Rufino.
+    Mi nombre es <strong>Eddy</strong> <strong>Rufino</strong>.
   </p>
   <p>
     Soy desarrollador web enfocado en crear y construir proyectos geniales utilizando <a href="https://laravel.com/" target="_blank">Laravel</a> y
