--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
     }
 
   </style>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-SL6VFBHYQ5"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-SL6VFBHYQ5');
+	</script>
 </head>
 <body>
   <h1>Hola.</h1>
