--- a/index.html
+++ b/index.html
@@ -1,51 +1,78 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Eddy Rufino</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Rubik:300,500,700" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      font-size: calc(10px + 0.33vw);
-      -webkit-font-smoothing: antialiased;
-      padding: 5vh 10vw;
-      color: #121314;
-    }
-    h1 {
-      font-size: 4.5em;
-      font-weight: 500;
-      margin-bottom: 0;
-    }
-    p {
-      font-size: 1.6em;
-      font-weight: 300;
-      line-height: 1.4;
-      max-width: 26em;
-    }
-    a {
-      text-decoration: none;
-      color: #121314;
-      position: relative;
-    }
-    a:after {
-      content: "";
-      position: absolute;
-      z-index: -1;
-      top: 60%;
-      left: -0.1em;
-      right: -0.1em;
-      bottom: 0;
-      transition: top 200ms cubic-bezier(0, .8, .13, 1);
-      background-color: tomato;
-    }
-    a:hover:after {
-      top: 0%;
-    }
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="description" content="Soy desarrollador web enfocado en crear y construir proyectos geniales utilizando Laravel y Vue.js. La mayor parte de mi trabajo es código abierto y está disponible públicamente en GitHub.">
+	<meta name="keywords" content="eddy rufino, eddyrufino, desarrollador web, eddyrufino desarrollador web, eddy rufino desarrollador web, programador en piura, desarrollador web en piura">
 
-  </style>
+	<!-- TWITTER -->
+	<meta name="twitter:card" content="https://avatars3.githubusercontent.com/u/33536840?s=400&u=8e6dc7390023dfca4f6259ae685884084a39b49e&v=4">
+	<meta name="twitter:title" content="Eddy Rufino">
+    <meta name="twitter:description" content="Soy desarrollador web enfocado en crear y construir proyectos geniales utilizando Laravel y Vue.js. La mayor parte de mi trabajo es código abierto y está disponible públicamente en GitHub.">
+    <meta name="twitter:site" content="@rufino_eddy">
+    <meta name="twitter:image:src" content="https://avatars3.githubusercontent.com/u/33536840?s=400&u=8e6dc7390023dfca4f6259ae685884084a39b49e&v=4">
+
+
+	<!-- FACEBOOK -->
+	<meta property="og:title" content="Eddy Rufino">
+	<meta property="og:description" content="Soy desarrollador web enfocado en crear y construir proyectos geniales utilizando Laravel y Vue.js. La mayor parte de mi trabajo es código abierto y está disponible públicamente en GitHub.">
+	<meta property="og:image" content="https://avatars3.githubusercontent.com/u/33536840?s=400&u=8e6dc7390023dfca4f6259ae685884084a39b49e&v=4">
+	<meta property="og:url" content="https://eddyrufino.com/">
+	<meta property="og:image:width" content="158">
+	<meta property="og:image:height" content="158">
+	<meta property="og:type" content="website">
+	<meta property="og:locale" content="es_ES">
+	<!-- <meta property="fb:admins" content="100000221740055" /> -->
+	<meta name="og:image:alt" content="Eddy Rufino">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<title>Eddy Rufino</title>
+
+	<!-- Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Rubik:300,500,700" rel="stylesheet">
+
+	<!-- Styles -->
+	<style>
+		body {
+		  font-family: 'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+		  font-size: calc(10px + 0.33vw);
+		  -webkit-font-smoothing: antialiased;
+		  padding: 5vh 10vw;
+		  color: #121314;
+		}
+		h1 {
+		  font-size: 4.5em;
+		  font-weight: 500;
+		  margin-bottom: 0;
+		}
+		p {
+		  font-size: 1.6em;
+		  font-weight: 300;
+		  line-height: 1.4;
+		  max-width: 26em;
+		}
+		a {
+		  text-decoration: none;
+		  color: #121314;
+		  position: relative;
+		}
+		a:after {
+		  content: "";
+		  position: absolute;
+		  z-index: -1;
+		  top: 60%;
+		  left: -0.1em;
+		  right: -0.1em;
+		  bottom: 0;
+		  transition: top 200ms cubic-bezier(0, .8, .13, 1);
+		  background-color: tomato;
+		}
+		a:hover:after {
+		  top: 0%;
+		}
+
+	</style>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-SL6VFBHYQ5"></script>
